# coursework5SEMtask2

./: CMakeLists.txt  Makefile  main.cpp
buildScript/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
